// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UrlBlock UrlBlock renders correctly with empty parameters 1`] = `
<h
  fullheight={false}
  title="Gamme "
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      columns={6}
      item={true}
      lg={6}
      md={6}
      xs={6}
    >
      <WithStyles(ForwardRef(FormLabel))>
        Url Pattern
      </WithStyles(ForwardRef(FormLabel))>
      <ScopeUrlField
        scopeUrl={null}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      columns={6}
      item={true}
      lg={6}
      md={6}
      xs={6}
    >
      <f
        config={null}
        fields={
          Array [
            Object {
              "columns": 8,
              "id": "name",
              "label": "Libelle du Radio-Bouton",
              "type": "input",
            },
            Object {
              "columns": 4,
              "defaultValue": false,
              "id": "isEnable",
              "label": "Gamme activée",
              "type": "switch",
            },
          ]
        }
        inputs={null}
        onChange={[Function]}
        onInit={[Function]}
        title={null}
        values={null}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <br />
  <WithStyles(ForwardRef(FormLabel))>
    Paramètres liés aux champs de saisie
  </WithStyles(ForwardRef(FormLabel))>
  <br />
</h>
`;

exports[`UrlBlock UrlBlock renders correctly with null parameters 1`] = `
<h
  fullheight={false}
  title="Gamme "
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      columns={6}
      item={true}
      lg={6}
      md={6}
      xs={6}
    >
      <WithStyles(ForwardRef(FormLabel))>
        Url Pattern
      </WithStyles(ForwardRef(FormLabel))>
      <ScopeUrlField
        scopeUrl={null}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      columns={6}
      item={true}
      lg={6}
      md={6}
      xs={6}
    >
      <f
        config={null}
        fields={
          Array [
            Object {
              "columns": 8,
              "id": "name",
              "label": "Libelle du Radio-Bouton",
              "type": "input",
            },
            Object {
              "columns": 4,
              "defaultValue": false,
              "id": "isEnable",
              "label": "Gamme activée",
              "type": "switch",
            },
          ]
        }
        inputs={null}
        onChange={[Function]}
        onInit={[Function]}
        title={null}
        values={null}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <br />
  <WithStyles(ForwardRef(FormLabel))>
    Paramètres liés aux champs de saisie
  </WithStyles(ForwardRef(FormLabel))>
  <br />
</h>
`;

exports[`UrlBlock UrlBlock renders correctly with parameters 1`] = `
<h
  fullheight={false}
  title="Gamme "
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      columns={6}
      item={true}
      lg={6}
      md={6}
      xs={6}
    >
      <WithStyles(ForwardRef(FormLabel))>
        Url Pattern
      </WithStyles(ForwardRef(FormLabel))>
      <ScopeUrlField
        scopeUrl={null}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      columns={6}
      item={true}
      lg={6}
      md={6}
      xs={6}
    >
      <f
        config={null}
        fields={
          Array [
            Object {
              "columns": 8,
              "id": "name",
              "label": "Libelle du Radio-Bouton",
              "type": "input",
            },
            Object {
              "columns": 4,
              "defaultValue": false,
              "id": "isEnable",
              "label": "Gamme activée",
              "type": "switch",
            },
          ]
        }
        inputs={null}
        onChange={[Function]}
        onInit={[Function]}
        title={null}
        values={null}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <br />
  <WithStyles(ForwardRef(FormLabel))>
    Paramètres liés aux champs de saisie
  </WithStyles(ForwardRef(FormLabel))>
  <br />
  <ParameterChip
    engine={null}
    parameter={
      Object {
        "key": "search",
        "typeId": 0,
      }
    }
    scopeId={null}
  />
  <ParameterChip
    engine={null}
    parameter={
      Object {
        "key": "Latitude",
        "typeId": 1,
      }
    }
    scopeId={null}
  />
</h>
`;
